# fuel-tracker

./: .pre-commit-config.yaml  README.md  fuel_tracker.db  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
frontend/python/: app.py  client.py
frontend/tests/: test_app_unit.py  test_client_unit.py
src/fuel_tracker/: __init__.py  api.py  config.py  db.py  main.py  models.py  repository.py  service.py
src/tests/: conftest.py  test_api_unit.py  test_config_unit.py  test_db_unit.py  test_repository_unit.py  test_service_unit.py
tests/: check_performance.py  locustfile.py  test_placeholder.py
tests/integration/: test_api_integration.py  test_frontend_integration.py
