[project]
name = "fuel-tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Aliya Sagdieva",email = "sagdievaaliya05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "streamlit>=1.30.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
flake8 = ">=6.0.0"
bandit = ">=1.7.0"
radon = ">=5.0.0"
httpx = ">=0.24.0"

[tool.bandit]
exclude_dirs = ["tests", "src/tests"]
